# miniverto

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  index.html  package-lock.json  package.json  start.bat  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO_MEDIA.md  GITHUB_REPOSITORY_COPY.md  LAUNCH_KIT.md  MACOS_AND_LINUX.md  OPEN_SOURCE_MAINTENANCE.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  ROADMAP.md  SCREENSHOTS.md  TROUBLESHOOTING.md
docs/articles/: why-local-first-ai-learning-planner.md
marketing/douyin-vibecoding-2026/: README.md  checklist.md  douyin-post-copy.md  project-core.md  video-script-douyin.md
scripts/: create_demo_gif.py
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_key_store.rs  assessment_store.rs  db.rs  lib.rs  main.rs  material_parser.rs  material_service.rs  note_store.rs  project_store.rs  provider_store.rs
src/data/: learning-methods.test.ts  learning-methods.ts  materials.test.ts  materials.ts  model-options.test.ts  model-options.ts  plan-input.test.ts  plan-input.ts  provider-config.test.ts  provider-config.ts
src/hooks/: useStreaming.ts
src/i18n/: en-US.json  index.ts  zh-CN.json
src/pages/: MaterialsPage.tsx  NotesPage.tsx  OnboardingPage.tsx  ProjectDetailPage.tsx  ProjectListPage.tsx  SettingsPage.tsx  (+2 more)
(+72 files in other folders)
